--- a/book_studio_cards.html
+++ b/book_studio_cards.html
@@ -10,7 +10,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
 <!-- Studio 1-1 -->
 <body>
   <div class="studio_card">
-    <img src="https://staticcontent.skedda.com/spaceimages/168328_0a7dcf08ed134befaea7a1211d168ba6.png" class="img1">
+    <img src="https://staticcontent.skedda.com/spaceimages/168328_0a7dcf08ed134befaea7a1211d168ba6.png" class="cover">
     <h1> Studio 1-1 </h1>
     <table>
       <tbody>
@@ -23,7 +23,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
       </tbody>
     </table>
     <br>
-    <div class="middle">
+    <div class="icon_row">
       <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><span>25-40 Guests</span></div>
       <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494fc62ca0a73fa53fb/1721156756905/icon-ruler.png" align="middle"><span>500 sqft</span></div>
       <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><span>Full Sunlight and Mirrors</span></div>
@@ -31,7 +31,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
     <div class="line"> </div>
     <br>
     <a href="https://carnation-hypersphere-2b7w.squarespace.com/studio-1-1-with-skedda">
-      <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
+      <button class="info_button">More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
     </a>
   </div>
 </body>
@@ -40,7 +40,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
 <!-- Studio 1-2 -->
  <body>
    <div class="studio_card">
-     <img src="https://staticcontent.skedda.com/spaceimages/168328_770ad2ce5dc14deb84bde7adb4519813.png" class="img1">
+     <img src="https://staticcontent.skedda.com/spaceimages/168328_770ad2ce5dc14deb84bde7adb4519813.png" class="cover">
      <h1> Studio 1-2 </h1>
      <table>
        <tbody>
@@ -53,7 +53,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
        </tbody>
      </table>
      <br>
-     <div class="middle">
+     <div class="icon_row">
        <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><span>25-40 Guests</span></div>
        <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494fc62ca0a73fa53fb/1721156756905/icon-ruler.png" align="middle"><span>500 sqft</span></div>
        <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecf99d9f230bcceefcae/1721232633771/icon-stage.png" align="middle"><span>Stage with Lights</span></div>
@@ -62,7 +62,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
      <div class="line"> </div>
      <br>
      <a href="https://carnation-hypersphere-2b7w.squarespace.com/studio-1-1-with-skedda">
-      <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
+      <button class="info_button">More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
      </a>
    </div>
  </body>
@@ -70,7 +70,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
 <!-- Studio Type 2 -->
  <body>
    <div class="studio_card">
-     <img src="https://staticcontent.skedda.com/spaceimages/168328_68c8ed3361ea46de851be4fe9e43e1f8.png" class="img1">
+     <img src="https://staticcontent.skedda.com/spaceimages/168328_68c8ed3361ea46de851be4fe9e43e1f8.png" class="cover">
      <h1> Studio Type 2 </h1>
      <table class="tablewide">
        <tbody>
@@ -83,7 +83,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
        </tbody>
      </table>
      <br>
-     <div class="middle">
+     <div class="icon_row">
        <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><span>20-30 Guests</span></div>
        <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494fc62ca0a73fa53fb/1721156756905/icon-ruler.png" align="middle"><span>340 sqft</span></div>
       <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><span>Mirrors and Windows</span></div>
@@ -91,7 +91,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
      <div class="line"> </div>
      <br>
      <a href="https://carnation-hypersphere-2b7w.squarespace.com/studio-1-1-with-skedda">
-       <button class="buttonwide">More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
+       <button class="info_button">More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
      </a>
    </div>
  </body>
@@ -100,7 +100,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
 <!-- Studio Type 3 -->
  <body>
    <div class="studio_card">
-     <img src="https://staticcontent.skedda.com/spaceimages/168328_45223a349a0d4d9a9132b12624cc1b74.png" class="img1">
+     <img src="https://staticcontent.skedda.com/spaceimages/168328_45223a349a0d4d9a9132b12624cc1b74.png" class="cover">
      <h1> Studio Type 3 </h1>
      <table class="tablewide">
        <tbody>
@@ -113,7 +113,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
        </tbody>
      </table>
      <br>
-     <div class="middle">
+     <div class="icon_row">
        <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><span>10-20 Guests</span></div>
        <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494fc62ca0a73fa53fb/1721156756905/icon-ruler.png" align="middle"><span>300 sqft</span></div>
        <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697e7d85efc44329525adca/1721231320754/icon-wall-mirror.png" align="middle"><span>Wall Length Mirrors</span></div>
@@ -121,7 +121,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
      <div class="line"> </div>
      <br>
      <a href="https://carnation-hypersphere-2b7w.squarespace.com/studio-1-1-with-skedda">
-       <button class="buttonwide">More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
+       <button class="info_button">More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
      </a>
    </div>
  </body>
@@ -130,7 +130,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
 <!-- Studio 2-1 -->
  <body>
    <div class="studio_card">
-     <img src="https://staticcontent.skedda.com/spaceimages/168328_9042c95f6e3e44bb9c6c976b267815c0.png" class="img1">
+     <img src="https://staticcontent.skedda.com/spaceimages/168328_9042c95f6e3e44bb9c6c976b267815c0.png" class="cover">
      <h1> Studio 2-1 </h1>
      <table>
        <tbody>
@@ -143,7 +143,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
        </tbody>
      </table>
      <br>
-     <div class="middle">
+     <div class="icon_row">
        <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><span>20-30 Guests</span></div>
        <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494fc62ca0a73fa53fb/1721156756905/icon-ruler.png" align="middle"><span>340 sqft</span></div>
        <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697efc32f7c257f79771a56/1721233347246/icon-low-volume.png" align="middle"><span>Additional Sound Dampening</span></div>
@@ -151,7 +151,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
      <div class="line"> </div>
      <br>
      <a href="https://carnation-hypersphere-2b7w.squarespace.com/studio-1-1-with-skedda">
-       <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
+       <button class="info_button">More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
      </a>
    </div>
  </body>
@@ -159,7 +159,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
 <!-- Studio 3-4 -->
  <body>
    <div class="studio_card">
-     <img src="https://staticcontent.skedda.com/spaceimages/168328_949d2821e5df41febc2810703e19691c.png" class="img1">
+     <img src="https://staticcontent.skedda.com/spaceimages/168328_949d2821e5df41febc2810703e19691c.png" class="cover">
      <h1> Studio 3-4 </h1>
      <table>
        <tbody>
@@ -172,7 +172,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
        </tbody>
      </table>
      <br>
-     <div class="middle">
+     <div class="icon_row">
        <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><span>10-15 Guests</span></div>
        <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494fc62ca0a73fa53fb/1721156756905/icon-ruler.png" align="middle"><span>340 sqft</span></div>
        <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecdadeded22f5e89bcfc/1721232602751/icon-presentation.png" align="middle"><span>Conference Room</span></div>
@@ -180,7 +180,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
      <div class="line"> </div>
      <br>
      <a href="https://carnation-hypersphere-2b7w.squarespace.com/studio-1-1-with-skedda">
-       <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
+       <button class="info_button">More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
      </a>
    </div>
  </body>
@@ -188,7 +188,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
 <!-- Studio 4 -->
  <body>
    <div class="studio_card">
-     <img src="https://staticcontent.skedda.com/spaceimages/168328_2d68021691604976b6a3d3face89b2e3.png" class="img1">
+     <img src="https://staticcontent.skedda.com/spaceimages/168328_2d68021691604976b6a3d3face89b2e3.png" class="cover">
      <h1> Studio 4 &nbsp</h1>
      <table>
        <tbody>
@@ -201,7 +201,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
        </tbody>
      </table>
      <br>
-     <div class="middle">
+     <div class="icon_row">
        <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><span>30-45 Guests</span></div>
        <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494fc62ca0a73fa53fb/1721156756905/icon-ruler.png" align="middle"><span>600 sqft</span></div>
        <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e7af01771ec9f3f0b6/1721234407864/icon-dance.png" align="middle"><span>Sprung Dance Floor</span></div>
@@ -209,7 +209,7 @@ dance- https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e
      <div class="line"> </div>
      <br>
      <a href="https://carnation-hypersphere-2b7w.squarespace.com/studio-1-1-with-skedda">
-       <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
+       <button class="info_button">More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
      </a>
    </div>
  </body>
