--- a/space_page.html
+++ b/space_page.html
@@ -3,7 +3,7 @@
 <!-- Studio 1-1 -->
 <div class="space_desc_box">
   <h3>
-    Studio 1-1 - Large Windowed Loft
+    Studio 1-1 - Windowed Loft
   </h3>
   <p2> Airy and Bright Space </p2> <br>
   <p2> This space is a great blank canvas that can host: </p2>
@@ -19,6 +19,26 @@
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
+
+<div class="slideshow-container">
+  <div class="mySlides">
+    <img src="https://staticcontent.skedda.com/spaceimages/168328_0a7dcf08ed134befaea7a1211d168ba6.png" style="width:100%">
+  </div>
+  <div class="mySlides">
+    <img src="https://staticcontent.skedda.com/spaceimages/168328_0786fccf188e489984e24dfaf112d835.png" style="width:100%">
+  </div>
+  <div class="mySlides">
+    <img src="https://staticcontent.skedda.com/spaceimages/168328_b13614a5cf1f4d2fa503ed6fb3715076.png" style="width:100%">
+  </div>
+</div>
+<br>
+<div style="text-align:center">
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+</div>
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
 
 
 <!-- Studio 1-2 -->
