--- a/pages/space_page.html
+++ b/pages/space_page.html
@@ -21,24 +21,21 @@
 </div>
 
 <div class="slideshow-container">
-  <div class="mySlides">
+  <div class="mySlides1">
     <img src="https://staticcontent.skedda.com/spaceimages/168328_0a7dcf08ed134befaea7a1211d168ba6.png" style="width:100%">
   </div>
-  <div class="mySlides">
+
+  <div class="mySlides1">
     <img src="https://staticcontent.skedda.com/spaceimages/168328_0786fccf188e489984e24dfaf112d835.png" style="width:100%">
   </div>
-  <div class="mySlides">
+
+  <div class="mySlides1">
     <img src="https://staticcontent.skedda.com/spaceimages/168328_b13614a5cf1f4d2fa503ed6fb3715076.png" style="width:100%">
   </div>
 </div>
-<br>
-<div style="text-align:center">
-  <span class="dot"></span>
-  <span class="dot"></span>
-  <span class="dot"></span>
-</div>
-<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
 
 
 <!-- Studio 1-2 -->
@@ -61,6 +58,22 @@
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
+
+<div class="slideshow-container">
+  <div class="mySlides2">
+    <img src="https://staticcontent.skedda.com/spaceimages/168328_770ad2ce5dc14deb84bde7adb4519813.png" style="width:100%">
+  </div>
+  <div class="mySlides2">
+    <img src="https://staticcontent.skedda.com/spaceimages/168328_ee6cc4ebea7f4202991a6e1c1135b358.png" style="width:100%">
+  </div>
+  <div class="mySlides2">
+    <img src="https://staticcontent.skedda.com/spaceimages/168328_1ad2e221319643c69168dde296bc4ee4.png" style="width:100%">
+  </div>
+</div>
+
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+
 
 
 <!-- Studio Type 2 -->
