--- a/pages/space_page.html
+++ b/pages/space_page.html
@@ -1,20 +1,17 @@
 <!-- Space Page Boxes -->
 
 <!-- Studio 1-1 -->
+<!-- Studio 1-1 -->
 <div class="space_desc_box">
   <h3>
     Studio 1-1 - Windowed Loft
   </h3>
-  <p2> Airy and Bright Space </p2> <br>
-  <p2> This space is a great blank canvas that can host: </p2>
-  <ul style="list-style-type: none;">
-    <li>Photo/video shoots </li>
-    <li>Conferences/meetings </li>
-    <li>Dance/improv rehearsals </li>
-    <li>Fittings </li>
-    <li><i>and more! </i></li>
-  </ul>
-  <p2> Space has oversized windows allowing for plenty of natural light and can accommodate up to 40 people </p2> <br>
+  <div class="icon_row">
+    <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><span>25-40 Guests</span></div>
+    <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494fc62ca0a73fa53fb/1721156756905/icon-ruler.png" align="middle"><span>500 sqft</span></div>
+    <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><span>Full Sunlight and Mirrors</span></div>
+  </div>
+  <p2> Cre8ive Space 1-1, an approximately 500 sq foot loft with 12+ foot ceilings and oversized windows that let in lots of natural light. Space 1-1 can host up to 40 people and will be the perfect location for all your off-site activities! </p2> <br>
   <a href="https://carnation-hypersphere-2b7w.squarespace.com/studio-1-1-with-skedda">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
