--- a/pages/space_page.html
+++ b/pages/space_page.html
@@ -21,16 +21,13 @@
   <div class="mySlides1">
     <img src="https://staticcontent.skedda.com/spaceimages/168328_0a7dcf08ed134befaea7a1211d168ba6.png" style="width:100%">
   </div>
-
   <div class="mySlides1">
     <img src="https://staticcontent.skedda.com/spaceimages/168328_0786fccf188e489984e24dfaf112d835.png" style="width:100%">
   </div>
-
   <div class="mySlides1">
     <img src="https://staticcontent.skedda.com/spaceimages/168328_b13614a5cf1f4d2fa503ed6fb3715076.png" style="width:100%">
   </div>
 </div>
-
   <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
 
@@ -38,23 +35,20 @@
 <!-- Studio 1-2 -->
 <div class="space_desc_box">
   <h3>
-    Studio 1-2 - Loft Theater
+    Studio 1-2 - Stage Loft
   </h3>
-  <p2> Theater space with a low stage, versatile lighting and a grand environment </p2> <br>
-  <p2> This space can be used for: </p2>
-  <ul style="list-style-type: none;">
-    <li>Theater productions </li>
-    <li>Improv performances </li>
-    <li>Auditions </li>
-    <li>Speaking events </li>
-    <li>Stage rehearsals </li>
-    <li><i>and more! </i></li>
-  </ul>
-  <p2> Space can accommodate up to 40 people and is the perfect place for your next performance </p2> <br>
+  <div class="icon_row">
+    <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><span>25-40 Guests</span></div>
+    <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494fc62ca0a73fa53fb/1721156756905/icon-ruler.png" align="middle"><span>500 sqft</span></div>
+    <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecf99d9f230bcceefcae/1721232633771/icon-stage.png" align="middle"><span>Stage with Lights</span></div>
+    <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><span>Street-View Windows</span></div>
+  </div>
+  <p2> Cre8ive Studio 1-2, an approximately 500 sq foot loft, is our theater space! The space boasts a low stage, outward-facing windows, versatile stage lighting and seating that matches the grand atmosphere of the room. </p2> <br>
   <a href="https://carnation-hypersphere-2b7w.squarespace.com/studio-1-1-with-skedda">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
+
 
 <div class="slideshow-container">
   <div class="mySlides2">
@@ -67,7 +61,6 @@
     <img src="https://staticcontent.skedda.com/spaceimages/168328_1ad2e221319643c69168dde296bc4ee4.png" style="width:100%">
   </div>
 </div>
-
   <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 
