--- a/pages/space_page.html
+++ b/pages/space_page.html
@@ -12,7 +12,7 @@
     <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><span>Full Sunlight and Mirrors</span></div>
   </div>
   <p2> Cre8ive Space 1-1, an approximately 500 sq foot loft with 12+ foot ceilings and oversized windows that let in lots of natural light. Space 1-1 can host up to 40 people and will be the perfect location for all your off-site activities! </p2> <br>
-  <a href="https://carnation-hypersphere-2b7w.squarespace.com/studio-1-1-with-skedda">
+  <a href="/studio-1-1">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
@@ -44,7 +44,7 @@
     <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><span>Street-View Windows</span></div>
   </div>
   <p2> Cre8ive Studio 1-2, an approximately 500 sq foot loft, is our theater space! The space boasts a low stage, outward-facing windows, versatile stage lighting and seating that matches the grand atmosphere of the room. </p2> <br>
-  <a href="https://carnation-hypersphere-2b7w.squarespace.com/studio-1-1-with-skedda">
+  <a href="/studio-1-2">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
