--- a/pages/space_page.html
+++ b/pages/space_page.html
@@ -7,8 +7,8 @@
     Studio 1-1 - Windowed Loft
   </h3>
   <div class="icon_row">
-    <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><span>25-40 Guests</span></div>
-    <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><span>Full Sunlight and Mirrors</span></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-40 Guests</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Full Sunlight and Mirrors</p2></div>
   </div>
   <p2> Cre8ive Space 1-1, an approximately 500 sq foot loft with 12+ foot ceilings and oversized windows that let in lots of natural light. Space 1-1 can host up to 40 people and will be the perfect location for all your off-site activities! </p2> <br>
   <a href="/studio-1-1">
@@ -37,9 +37,9 @@
     Studio 1-2 - Stage Loft
   </h3>
   <div class="icon_row">
-    <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><span>25-40 Guests</span></div>
-    <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecf99d9f230bcceefcae/1721232633771/icon-stage.png" align="middle"><span>Stage with Lights</span></div>
-    <div class="icon_item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><span>Street-View Windows</span></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-40 Guests</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecf99d9f230bcceefcae/1721232633771/icon-stage.png" align="middle"><p2>Stage with Lights</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Street-View Windows</p2></div>
   </div>
   <p2> Cre8ive Studio 1-2, an approximately 500 sq foot loft, is our theater space! The space boasts a low stage, outward-facing windows, versatile stage lighting and seating that matches the grand atmosphere of the room. </p2> <br>
   <a href="/studio-1-2">
