--- a/pages/space_page.html
+++ b/pages/space_page.html
@@ -1,13 +1,12 @@
 <!-- Space Page Boxes -->
 
 <!-- Studio 1-1 -->
-<!-- Studio 1-1 -->
 <div class="space_desc_box">
   <h3>
     Studio 1-1 - Windowed Loft
   </h3>
   <div class="icon_row">
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-40 Guests</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-30 Guests</p2></div>
     <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Full Sunlight and Mirrors</p2></div>
   </div>
   <p2> Cre8ive Space 1-1, an approximately 500 sq foot loft with 12+ foot ceilings and oversized windows that let in lots of natural light. Space 1-1 can host up to 40 people and will be the perfect location for all your off-site activities! </p2> <br>
@@ -17,15 +16,9 @@
 </div>
 
 <div class="slideshow-container">
-  <div class="mySlides1">
-    <img src="https://staticcontent.skedda.com/spaceimages/168328_0a7dcf08ed134befaea7a1211d168ba6.png" style="width:100%">
-  </div>
-  <div class="mySlides1">
-    <img src="https://staticcontent.skedda.com/spaceimages/168328_0786fccf188e489984e24dfaf112d835.png" style="width:100%">
-  </div>
-  <div class="mySlides1">
-    <img src="https://staticcontent.skedda.com/spaceimages/168328_b13614a5cf1f4d2fa503ed6fb3715076.png" style="width:100%">
-  </div>
+  <div class="mySlides1"><img src="https://staticcontent.skedda.com/spaceimages/168328_0a7dcf08ed134befaea7a1211d168ba6.png" style="width:100%"></div>
+  <div class="mySlides1"><img src="https://staticcontent.skedda.com/spaceimages/168328_0786fccf188e489984e24dfaf112d835.png" style="width:100%"></div>
+  <div class="mySlides1"><img src="https://staticcontent.skedda.com/spaceimages/168328_b13614a5cf1f4d2fa503ed6fb3715076.png" style="width:100%"></div>
 </div>
   <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
@@ -37,7 +30,7 @@
     Studio 1-2 - Stage Loft
   </h3>
   <div class="icon_row">
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-40 Guests</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-30 Guests</p2></div>
     <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecf99d9f230bcceefcae/1721232633771/icon-stage.png" align="middle"><p2>Stage with Lights</p2></div>
     <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Street-View Windows</p2></div>
   </div>
@@ -49,15 +42,9 @@
 
 
 <div class="slideshow-container">
-  <div class="mySlides2">
-    <img src="https://staticcontent.skedda.com/spaceimages/168328_770ad2ce5dc14deb84bde7adb4519813.png" style="width:100%">
-  </div>
-  <div class="mySlides2">
-    <img src="https://staticcontent.skedda.com/spaceimages/168328_ee6cc4ebea7f4202991a6e1c1135b358.png" style="width:100%">
-  </div>
-  <div class="mySlides2">
-    <img src="https://staticcontent.skedda.com/spaceimages/168328_1ad2e221319643c69168dde296bc4ee4.png" style="width:100%">
-  </div>
+  <div class="mySlides2"><img src="https://staticcontent.skedda.com/spaceimages/168328_770ad2ce5dc14deb84bde7adb4519813.png" style="width:100%"></div>
+  <div class="mySlides2"><img src="https://staticcontent.skedda.com/spaceimages/168328_ee6cc4ebea7f4202991a6e1c1135b358.png" style="width:100%"></div>
+  <div class="mySlides2"><img src="https://staticcontent.skedda.com/spaceimages/168328_1ad2e221319643c69168dde296bc4ee4.png" style="width:100%"></div>
 </div>
   <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
@@ -69,41 +56,50 @@
   <h3>
     Studio Type 2
   </h3>
-  <p2> Multipurpose space with abundant natural light </p2> <br>
-  <p2> This space can be used for: </p2>
-  <ul style="list-style-type: none;">
-    <li>Corperate meetings </li>
-    <li>Fittings </li>
-    <li>Photo/video shoots </li>
-    <li>Classes </li>
-    <li><i>and more! </i></li>
-  </ul>
-  <p2> Five lofts, each with approximately 340 sq ft of space, that can accommodate up to 20 people </p2> <br>
-  <a href="https://carnation-hypersphere-2b7w.squarespace.com/studio-1-1-with-skedda">
+  <div class="icon_row">
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>20-25 Guests</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Mirrors and Windows</p2></div>
+  </div>
+  <p2> Cre8ive Space 2-2, a 323 sq foot loft, boasts 12+ foot ceilings, a mirrored wall, and outward-facing, oversized windows for tons of natural light. The space accommodates up to 25 people, and has acoustic installation along with sound dampening, and versatile lighting </p2> <br>
+  <a href="/studio-type-2">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
+
+
+<div class="slideshow-container">
+  <div class="mySlides3"><img src="https://staticcontent.skedda.com/spaceimages/168328_770ad2ce5dc14deb84bde7adb4519813.png" style="width:100%"></div>
+  <div class="mySlides3"><img src="https://staticcontent.skedda.com/spaceimages/168328_ee6cc4ebea7f4202991a6e1c1135b358.png" style="width:100%"></div>
+  <div class="mySlides3"><img src="https://staticcontent.skedda.com/spaceimages/168328_1ad2e221319643c69168dde296bc4ee4.png" style="width:100%"></div>
+</div>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 
 
 <!-- Studio 2-1 -->
 <div class="space_desc_box">
   <h3>
-    Studio 2-1 - Production Room
+    Studio 2-1
   </h3>
-  <p2> Quiet space with extra sound-dampening and natural light </p2> <br>
-  <p2> This space can be used for: </p2>
-  <ul style="list-style-type: none;">
-    <li>Podcast recordings </li>
-    <li>Video conferencing </li>
-    <li>Yoga/meditation classes </li>
-    <li>Private meetings </li>
-    <li><i>and more! </i></li>
-  </ul>
-  <p2> This space has extra sound-dampening, making it a great space for recordings and can accommodate up to 20 people </p2> <br>
-  <a href="https://carnation-hypersphere-2b7w.squarespace.com/studio-1-1-with-skedda">
+  <div class="icon_row">
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>20-25 Guests</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Windows</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697efc32f7c257f79771a56/1721233347246/icon-low-volume.png" align="middle"><p2>Additional Sound Dampening</p2></div>
+  </div>
+  <p2> Cre8ive Space 2-1, a 344 sq foot loft, boasts 12+ foot ceilings, a mirrored wall, and outward-facing, oversized windows for tons of natural light. </p2> <br>
+  <a href="/studio-2-1">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
+
+
+<div class="slideshow-container">
+  <div class="mySlides4"><img src="https://staticcontent.skedda.com/spaceimages/168328_770ad2ce5dc14deb84bde7adb4519813.png" style="width:100%"></div>
+  <div class="mySlides4"><img src="https://staticcontent.skedda.com/spaceimages/168328_ee6cc4ebea7f4202991a6e1c1135b358.png" style="width:100%"></div>
+  <div class="mySlides4"><img src="https://staticcontent.skedda.com/spaceimages/168328_1ad2e221319643c69168dde296bc4ee4.png" style="width:100%"></div>
+</div>
+  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 
 
 <!-- Studio Type 3 -->
@@ -111,20 +107,24 @@
   <h3>
     Studio Type 3
   </h3>
-  <p2> Multipurpose private space </p2> <br>
-  <p2> This space can be used for: </p2>
-  <ul style="list-style-type: none;">
-    <li>Intimate meetings </li>
-    <li>Interviews/Auditions </li>
-    <li>Dance classes </li>
-    <li>Lectures </li>
-    <li><i>and more! </i></li>
-  </ul>
-  <p2> These interior spaces are private and cozy, with minimal distractions so that you can get down to business </p2> <br>
-  <a href="https://carnation-hypersphere-2b7w.squarespace.com/studio-1-1-with-skedda">
+  <div class="icon_row">
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>15-20 Guests</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697e7d85efc44329525adca/1721231320754/icon-wall-mirror.png" align="middle"><p2>Wall Length Mirrors</p2></div>
+  </div>
+  <p2> Cre8ive Space 3-1, with 12+ ft ceilings and a 323 sq ft floor plan, is a stunning interior loft that can be modified and customized to fit any activity! The space contains a mirrored wall, acoustic installation, and versatile lighting. </p2> <br>
+  <a href="/studio-type-3">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
+
+
+<div class="slideshow-container">
+  <div class="mySlides5"><img src="https://staticcontent.skedda.com/spaceimages/168328_770ad2ce5dc14deb84bde7adb4519813.png" style="width:100%"></div>
+  <div class="mySlides5"><img src="https://staticcontent.skedda.com/spaceimages/168328_ee6cc4ebea7f4202991a6e1c1135b358.png" style="width:100%"></div>
+  <div class="mySlides5"><img src="https://staticcontent.skedda.com/spaceimages/168328_1ad2e221319643c69168dde296bc4ee4.png" style="width:100%"></div>
+</div>
+  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
 
 
 <!-- Studio 3-4 -->
@@ -132,38 +132,46 @@
   <h3>
     Studio 3-4 - Conference Room
   </h3>
-  <p2> Professional conference room </p2> <br>
-  <p2> This space can be used for: </p2>
-  <ul style="list-style-type: none;">
-    <li>Video conferencing </li>
-    <li>Interviews </li>
-    <li>Boardroom meetings </li>
-    <li>Off-site meetings </li>
-    <li><i>and more! </i></li>
-  </ul>
-  <p2> Our permanent conference room contains mobile dry-erase boards and a wall-mounted flat-screen TV for presentations </p2> <br>
-  <a href="https://carnation-hypersphere-2b7w.squarespace.com/studio-1-1-with-skedda">
+  <div class="icon_row">
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>10-15 Guests</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecdadeded22f5e89bcfc/1721232602751/icon-presentation.png" align="middle"><p2>Conference Room</p2></div>
+  </div>
+  <p2> Cre8ive Space 3-4, with 12+ ft ceilings and a 323 sq ft floor plan, is a newly remodeled permanent conference table set up, ready to be booked starting at $40 an hour. </p2> <br>
+  <a href="/studio-3-4">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
+
+
+<div class="slideshow-container">
+  <div class="mySlides6"><img src="https://staticcontent.skedda.com/spaceimages/168328_770ad2ce5dc14deb84bde7adb4519813.png" style="width:100%"></div>
+  <div class="mySlides6"><img src="https://staticcontent.skedda.com/spaceimages/168328_ee6cc4ebea7f4202991a6e1c1135b358.png" style="width:100%"></div>
+  <div class="mySlides6"><img src="https://staticcontent.skedda.com/spaceimages/168328_1ad2e221319643c69168dde296bc4ee4.png" style="width:100%"></div>
+</div>
+  <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
 
 
 <!-- Studio 4 -->
 <div class="space_desc_box">
   <h3>
-    Studio 4 - Large Dance Studio
+    Studio 4
   </h3>
-  <p2> Multipurpose exercise and event space </p2> <br>
-  <p2> This space can be used for: </p2>
-  <ul style="list-style-type: none;">
-    <li>Dance and exercise classes </li>
-    <li>Performances </li>
-    <li>Runway practice </li>
-    <li>Fittings </li>
-    <li><i>and more! </i></li>
-  </ul>
-  <p2> 600 sq ft dance studio with newly installed sprung-floor and a wall-to-wall mirror with draw curtains </p2> <br>
-  <a href="https://carnation-hypersphere-2b7w.squarespace.com/studio-1-1-with-skedda">
+  <div class="icon_row">
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>30-40 Guests</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e7af01771ec9f3f0b6/1721234407864/icon-dance.png" align="middle"><p2>Sprung Dance Floor</p2></div>
+  </div>
+  <p2> At 600 sq ft, Space 4 is our largest available space. Starting at $69 an hour, this 40 -person capacity space contains a wall-to-wall mirror with drawable curtains, versatile lighting, </p2> <br>
+  <a href="/studio-4">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
+
+
+<div class="slideshow-container">
+  <div class="mySlides7"><img src="https://staticcontent.skedda.com/spaceimages/168328_770ad2ce5dc14deb84bde7adb4519813.png" style="width:100%"></div>
+  <div class="mySlides7"><img src="https://staticcontent.skedda.com/spaceimages/168328_ee6cc4ebea7f4202991a6e1c1135b358.png" style="width:100%"></div>
+  <div class="mySlides7"><img src="https://staticcontent.skedda.com/spaceimages/168328_1ad2e221319643c69168dde296bc4ee4.png" style="width:100%"></div>
+</div>
+  <a class="prev" onclick="plusSlides(-1, 6)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 6)">&#10095;</a>
