--- a/pages/individual_spaces_common.html
+++ b/pages/individual_spaces_common.html
@@ -17,68 +17,8 @@
   </div>
 </div>
 
+<!-- shared blurb  -->
+<p2> Cre8ive offers flexible setup options to suit your needs. Our spaces come equipped with essential furniture like tables, chairs, and whiteboards at no extra cost. For added convenience, we offer paid add-ons such as projectors, coffee and tea, and lighting equipment. Whether you require a blank canvas, basic workspace or a fully-equipped office, we have a solution for you. </p2>
 
-<!-- Amenities -->
-<div class="two_columns">
-  <div class="column">
-    <h4>Room Amenities</h4>
-    <div class="icon_text_list">
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea1029b36a65d6cecae1/1723132432093/icon-cre8ive-empty.png"><p>Windows</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea1029b36a65d6cecae1/1723132432093/icon-cre8ive-empty.png"><p>Mirrors</p></div>
-      <!-- <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea1029b36a65d6cecae1/1723132432093/icon-cre8ive-empty.png"><p>Flat-Screen TV</p></div> -->
-      <!-- <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea1029b36a65d6cecae1/1723132432093/icon-cre8ive-empty.png"><p>Stage</p></div> -->
-      <!-- <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea1029b36a65d6cecae1/1723132432093/icon-cre8ive-empty.png"><p>Additional Sound Dampening</p></div> -->
-    </div>
-    <br>
-    <h4>Facility Amenities</h4>
-    <div class="icon_text_list">
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea1029b36a65d6cecae1/1723132432093/icon-cre8ive-empty.png"><p>High-Speed Wi-Fi</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea1029b36a65d6cecae1/1723132432093/icon-cre8ive-empty.png"><p>Filtered/Sparkling Water</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea1029b36a65d6cecae1/1723132432093/icon-cre8ive-empty.png"><p>Room Set-Up</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea1029b36a65d6cecae1/1723132432093/icon-cre8ive-empty.png"><p>Hosted Reception</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea1029b36a65d6cecae1/1723132432093/icon-cre8ive-empty.png"><p>On-Site Support</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea1029b36a65d6cecae1/1723132432093/icon-cre8ive-empty.png"><p>Elevator</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea1029b36a65d6cecae1/1723132432093/icon-cre8ive-empty.png"><p>Accessible Restrooms</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea1029b36a65d6cecae1/1723132432093/icon-cre8ive-empty.png"><p>Filming Allowed</p></div>
-    </div>
-  </div>
-  <div class="column">
-    <h4>On Request</h4>
-    <div class="icon_text_list">
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea10ff4ff610f15b578d/1723132432098/icon-heart-tag.png"><p>Tables</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea10ff4ff610f15b578d/1723132432098/icon-heart-tag.png"><p>Chairs</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea10ff4ff610f15b578d/1723132432098/icon-heart-tag.png"><p>Whiteboard</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea10ff4ff610f15b578d/1723132432098/icon-heart-tag.png"><p>Speaker</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea10ff4ff610f15b578d/1723132432098/icon-heart-tag.png"><p>Rolling Racks and Hangars</p></div>
-    </div>
-    <br>
-    <h4>Paid Amenities</h4>
-    <div class="icon_text_list">
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png"><p>Projector</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png"><p>Coffee/Tea Package</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png"><p>Ring Light</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png"><p>Paper Backdrop</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png"><p>Backless Stools</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png"><p>Breakout Spaces</p></div>
-      <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png"><p>Waiting Rooms</p></div>
-    </div>
-  </div>
-</div>
-
-
-<!-- Set-Ups -->
-<h3 style="text-align:center">Set-Ups</h3>
-<div class="icon_row" style="margin-bottom: 10px;">
-  <div class="setup_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25cd532d8704d046cd0fa/1722965205168/setup-hollow-square.png"><p2>Hollow Square</p2></div>
-	<div class="setup_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25cd47f9a41601151c95e/1722965204984/setup-classroom.png"><p2>Classroom</p2></div>
-	<div class="setup_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25cd5dc21611738d7e45d/1722965205021/setup-conference.png"><p2>Conference</p2></div>
-	<div class="setup_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25db648aa555017e95dfb/1722965430710/setup-workshop.png"><p2>Workshop</p2></div>
-	<div class="setup_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25db6300dab43af0ed116/1722965430480/setup-u-shape.png"><p2>U-Shape</p2></div>
-</div>
-<div class="icon_row">
-  <div class="setup_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25cd46a90d57f0021653e/1722965204946/setup-chairs-square.png"><p2>Square Chairs</p2></div>
-	<div class="setup_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25db6bf28b218ef2d8cd7/1722965430440/setup-runway.png"><p2>Runway</p2></div>
-  <div class="setup_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25cd4efc30224b1d990a9/1722965205007/setup-columns.png"><p2>Columns</p2></div>
-	<div class="setup_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25db648aa555017e95dfa/1722965430706/setup-theater.png"><p2>Theater</p2></div>
-	<div class="setup_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25cd4c6c2085b4c4c617b/1722965204968/setup-chairs-u.png"><p2>Horseshoe</p2></div>
-</div>
+<!-- schedule embed (remember the style and viewtype (&viewtype=0" style="width:100%;height:900px;))  -->
+<iframe src="https://cre8ivenyc.skedda.com/booking?embedded=true&spacefeatureids=21436f20b3e04d989f26ca61ee52c125&viewtype=0" style="width:100%;height:900px;"></iframe> 
