--- a/pages/individual_spaces.html
+++ b/pages/individual_spaces.html
@@ -1,29 +1,124 @@
-<!-- Studio 1-1 -->
-<h2 style="text-align:center;">
-  Studio 1-1 - Large Windowed Loft
-</h2>
-<div class="icon_row" style="margin-left: 40px; margin-right:40px;">
-  <div class="price">
-    <div class="icon_text_list">
-      <div class="item">
-        <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
-        <p>$60/hr before 6pm</p>
-      </div>
-      <div class="item">
-        <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
-        <p>$65/hr after 6pm</p>
+<!-- Space 1-1 -->
+<div class="space_page">
+  <h2>Space 1-1 - Large Windowed Loft</h2>
+  <div class="icon_row">
+    <div class="price">
+      <div class="icon_text_list">
+        <div class="item" style="margin-top: -10px">
+          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+          <p>$60/hr before 6pm</p>
+        </div>
+        <div class="item">
+          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+          <p>$65/hr after 6pm</p>
+        </div>
       </div>
     </div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-30 Guests</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Full Sunlight and Mirrors</p2></div>
   </div>
-  <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle">
-    <p2>25-40 Guests</p2>
-  </div>
-  <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle">
-    <p2>Full Sunlight and Mirrors</p2>
-  </div>
+  <p2> Space 1-1 is a versatile space designed to accommodate a wide range of events, from corporate retreats and team-building workshops to product launches. Our spacious 500 sq ft loft offers ample room for your group to spread out and engage in activities, while the high ceilings create a sense of openness and grandeur. </p2> 
+  <br style="margin-bottom:10px;">
+  <p2>The flexible layout of Space 1-1 allows you to customize the space to suit your specific needs. Whether you require a traditional conference setup, a breakout session area, or a more informal gathering space, we can accommodate your preferences. </p2>
+  <br style="margin-bottom:10px;">
+  <p2>With its adaptable design and prime location, Space 1-1 is the perfect venue for hosting memorable and successful events.</p2>
+  <hr style="margin-top:20px;margin-bottom:20px;">
+  <p2> Cre8ive offers flexible setup options to suit your needs. Our spaces come equipped with essential furniture like tables, chairs, and whiteboards at no extra cost. For added convenience, we offer paid add-ons such as projectors, coffee and tea, and lighting equipment. Whether you require a blank canvas, basic workspace or a fully-equipped office, we have a solution for you. </p2>
 </div>
-<p2> Cre8ive Space 1-1, an approximately 500 sq foot loft with 12+ foot ceilings and oversized windows that let in lots of natural light. Space 1-1 can host up to 40 people and will be the perfect location for all your off-site activities! </p2>
-<hr style="margin-top:20px;margin-bottom:20px;">
-<p2> Cre8ive offers flexible setup options to suit your needs. Our spaces come equipped with essential furniture like tables, chairs, and whiteboards at no extra cost. For added convenience, we offer paid add-ons such as projectors, coffee and tea, and lighting equipment. Whether you require a blank canvas, basic workspace or a fully-equipped office, we have a solution for you. </p2>
 
 <iframe src="https://cre8ivenyc.skedda.com/booking?embedded=true&spacefeatureids=21436f20b3e04d989f26ca61ee52c125&viewtype=0" style="width:100%;height:900px;"></iframe> 
+
+
+<!-- Space 1-2 -->
+<div class="space_page">
+  <h2>Space 1-2 - Stage Loft</h2>
+  <div class="icon_row">
+    <div class="price">
+      <div class="icon_text_list">
+        <div class="item" style="margin-top: -10px">
+          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+          <p>$60/hr before 6pm</p>
+        </div>
+        <div class="item">
+          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+          <p>$65/hr after 6pm</p>
+        </div>
+      </div>
+    </div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-30 Guests</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecf99d9f230bcceefcae/1721232633771/icon-stage.png" align="middle"><p2>Stage with Lights</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Street-View Windows</p2></div>
+  </div>
+  <p2> Space 1-2 is a versatile 500 sq ft loft that can effortlessly adapt to a variety of events, from board meetings to captivating theatrical performances. The space's low stage provides a focal point for presentations, panel discussions, or even small-scale productions. </p2>
+  <br style="margin-bottom:10px;">
+  <p2>With comfortable seating and adaptable lighting, Space 1-2 creates a professional and engaging atmosphere that leaves a lasting impression on attendees. Our sound-dampening materials ensure optimal acoustics, perfect for presentations, performances, or confidential discussions.</p2>
+  <br style="margin-bottom:10px;">
+  <p2>Whether you're hosting a corporate event, an academic conference, or a creative showcase, Space 1-2 offers the ideal setting to make your event a memorable success.</p2>
+  <hr style="margin-top:20px;margin-bottom:20px;">
+  <p2> Cre8ive offers flexible setup options to suit your needs. Our spaces come equipped with essential furniture like tables, chairs, and whiteboards at no extra cost. For added convenience, we offer paid add-ons such as projectors, coffee and tea, and lighting equipment. Whether you require a blank canvas, basic workspace or a fully-equipped office, we have a solution for you. </p2>
+</div>
+
+<iframe src="https://cre8ivenyc.skedda.com/booking?embedded=true&spacefeatureids=e49c44ae560c4895801b94e52109b568&viewtype=0" style="width:100%;height:900px;"></iframe> 
+
+
+<!-- Space Type 2 -->
+<div class="space_page">
+  <h2>Space Type 2</h2>
+  <div class="icon_row">
+    <div class="price">
+      <div class="icon_text_list">
+        <div class="item" style="margin-top: -10px">
+          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+          <p>$44/hr before 6pm</p>
+        </div>
+        <div class="item">
+          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+          <p>$49/hr after 6pm</p>
+        </div>
+      </div>
+    </div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>20-25 Guests</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Mirrors and Windows</p2></div>
+  </div>
+  <p2> Space Type 2 is a versatile 323 sq ft loft bathed in natural light, offering a bright and inspiring atmosphere. The oversized windows not only provide ample daylight but also create a sense of openness and connection to the outside world. </p2>
+  <br style="margin-bottom:10px;">
+  <p2> The mirrored wall in Studio Type 2 adds a touch of elegance and can be used for various purposes, such as dance classes, yoga sessions, or simply creating a more dynamic space. </p2>
+  <br style="margin-bottom:10px;">
+  <p2>With its adaptable layout, Space Type 2 can accommodate a variety of activities, from small team meetings to creative workshops. The space can comfortably host up to 25 people, providing ample room for collaboration and productivity. The studio's versatile lighting allows you to adjust the ambiance to suit your specific needs, whether you prefer a bright and energetic environment or a more subdued and focused atmosphere.</p2>
+  <br style="margin-bottom:10px;">
+  <p2>Overall, Space Type 2 offers a flexible, inspiring, and productive workspace that can be tailored to your unique requirements.</p2>
+  <hr style="margin-top:20px;margin-bottom:20px;">
+  <p2> Cre8ive offers flexible setup options to suit your needs. Our spaces come equipped with essential furniture like tables, chairs, and whiteboards at no extra cost. For added convenience, we offer paid add-ons such as projectors, coffee and tea, and lighting equipment. Whether you require a blank canvas, basic workspace or a fully-equipped office, we have a solution for you. </p2>
+</div>
+
+<iframe src="https://cre8ivenyc.skedda.com/booking?embedded=true&spacefeatureids=66086&viewtype=0" style="width:100%;height:900px;"></iframe> 
+
+
+<!-- Space 2-1 -->
+<div class="space_page">
+  <h2>Space 1-2 - Stage Loft</h2>
+  <div class="icon_row">
+    <div class="price">
+      <div class="icon_text_list">
+        <div class="item" style="margin-top: -10px">
+          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+          <p>$60/hr before 6pm</p>
+        </div>
+        <div class="item">
+          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+          <p>$65/hr after 6pm</p>
+        </div>
+      </div>
+    </div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-30 Guests</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecf99d9f230bcceefcae/1721232633771/icon-stage.png" align="middle"><p2>Stage with Lights</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Street-View Windows</p2></div>
+  </div>
+  <p2> Space 1-2 is a versatile 500 sq ft loft that can effortlessly adapt to a variety of events, from board meetings to captivating theatrical performances. The space's low stage provides a focal point for presentations, panel discussions, or even small-scale productions. </p2>
+  <br style="margin-bottom:10px;">
+  <p2>With comfortable seating and adaptable lighting, Space 1-2 creates a professional and engaging atmosphere that leaves a lasting impression on attendees. Our sound-dampening materials ensure optimal acoustics, perfect for presentations, performances, or confidential discussions.</p2>
+  <br style="margin-bottom:10px;">
+  <p2>Whether you're hosting a corporate event, an academic conference, or a creative showcase, Space 1-2 offers the ideal setting to make your event a memorable success.</p2>
+  <hr style="margin-top:20px;margin-bottom:20px;">
+  <p2> Cre8ive offers flexible setup options to suit your needs. Our spaces come equipped with essential furniture like tables, chairs, and whiteboards at no extra cost. For added convenience, we offer paid add-ons such as projectors, coffee and tea, and lighting equipment. Whether you require a blank canvas, basic workspace or a fully-equipped office, we have a solution for you. </p2>
+</div>
